Bug 202671 - int3403 thermal probe of INT3403 failed with error -22
Summary: int3403 thermal probe of INT3403 failed with error -22
Status: RESOLVED CODE_FIX
Alias: None
Product: Power Management
Classification: Unclassified
Component: Thermal (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Zhang Rui
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-24 18:41 UTC by Chris Murphy
Modified: 2019-03-11 02:52 UTC (History)
0 users

See Also:
Kernel Version: 5.0.0-0.rc7.git2.1.fc31.x86_64
Subsystem:
Regression: No
Bisected commit-id:


Attachments
acpidump (963.87 KB, text/plain)
2019-02-24 18:44 UTC, Chris Murphy
Details
dmesg (132.44 KB, text/plain)
2019-02-24 18:44 UTC, Chris Murphy
Details
lspci vvnn (52.76 KB, text/plain)
2019-02-24 18:44 UTC, Chris Murphy
Details
dmidecode (19.62 KB, text/plain)
2019-02-24 18:45 UTC, Chris Murphy
Details
patch: favor _TMP instead of PTYP (1.69 KB, patch)
2019-02-28 08:23 UTC, Zhang Rui
Details | Diff
dmesg nopatch (75.80 KB, text/plain)
2019-02-28 23:22 UTC, Chris Murphy
Details
dmesg with patch (75.21 KB, text/plain)
2019-02-28 23:23 UTC, Chris Murphy
Details

Description Chris Murphy 2019-02-24 18:41:39 UTC
Kernel:
5.0.0-0.rc7.git2.1.fc31.x86_64 is git 2137397c92ae, but the problem exists going back to at least kernel 4.10.

Hardware:
[    0.000000] flap.local kernel: DMI: HP HP Spectre Notebook/81A0, BIOS F.42 10/25/2018

Error/problem:
[chris@flap ~]$ sudo journalctl -k -o short-monotonic | grep thermal
[    0.884238] flap.local kernel: ACPI: \_PR_.CPU0: _OSC native thermal LVT Acked
[    2.030193] flap.local kernel: thermal LNXTHERM:00: registered as thermal_zone0
[    2.030887] flap.local kernel: thermal LNXTHERM:01: registered as thermal_zone1
[    2.031208] flap.local kernel: thermal LNXTHERM:02: registered as thermal_zone2
[    7.741515] flap.local kernel: int3403 thermal: probe of INT3403:00 failed with error -22
[    7.876894] flap.local kernel: proc_thermal 0000:00:04.0: Creating sysfs group for PROC_THERMAL_PCI
[    8.816928] flap.local kernel: thermal thermal_zone7: failed to read out thermal zone (-61)
[chris@flap ~]$ 


Similar downstream bug is reportedly fixed on different make/model
https://bugzilla.redhat.com/show_bug.cgi?id=1438903
Comment 1 Chris Murphy 2019-02-24 18:44:02 UTC
Created attachment 281323 [details]
acpidump

$ sudo acpidump > acpidump.out
Comment 2 Chris Murphy 2019-02-24 18:44:13 UTC
Created attachment 281325 [details]
dmesg
Comment 3 Chris Murphy 2019-02-24 18:44:26 UTC
Created attachment 281327 [details]
lspci vvnn
Comment 4 Chris Murphy 2019-02-24 18:45:09 UTC
Created attachment 281329 [details]
dmidecode
Comment 5 Zhang Rui 2019-02-25 01:49:21 UTC
(In reply to Chris Murphy from comment #0)
> 
> Similar downstream bug is reportedly fixed on different make/model
> https://bugzilla.redhat.com/show_bug.cgi?id=1438903

This is not the same issue.


        Device (GEN1)
        {
            Name (_HID, EisaId ("INT3403") /* DPTF Temperature Sensor */)  // _HID: Hardware ID
            Name (_UID, "GEN1")  // _UID: Unique ID
            Name (_STR, Unicode ("Thermistor 1 SDRAM_hotspot_RT5B1"))  // _STR: Description String
            Name (PTYP, 0x12)


This is got from the acpidump, and we can see that PTYP returns 0x12, which seems bogus to me.
Comment 6 Chris Murphy 2019-02-25 05:14:26 UTC
Bogus as in ignorable firmware bug? Or should I ask HP to fix it?
Comment 7 Zhang Rui 2019-02-25 06:43:33 UTC
I'm grabbing some information need, so please hold for one day or two, and I will get back to you later.
Comment 8 Zhang Rui 2019-02-28 08:23:07 UTC
Created attachment 281405 [details]
patch: favor _TMP instead of PTYP

please check if this patch helps or not
Comment 9 Chris Murphy 2019-02-28 23:22:40 UTC
Created attachment 281433 [details]
dmesg nopatch

5.0.0rc8, git 7d762d69145a, without patch
Comment 10 Chris Murphy 2019-02-28 23:23:09 UTC
Created attachment 281435 [details]
dmesg with patch

5.0.0rc8, git 7d762d69145a, with patch
Comment 11 Chris Murphy 2019-02-28 23:24:59 UTC
[chris@flap ~]$ grep -i thermal bug202671dmesg5.0.0rc8-nopatch.txt 
[    0.250105] mce: CPU0: Thermal monitoring enabled (TM1)
[    0.700561] ACPI: \_PR_.CPU0: _OSC native thermal LVT Acked
[    2.958967] thermal LNXTHERM:00: registered as thermal_zone0
[    2.958991] ACPI: Thermal Zone [TZ00] (28 C)
[    2.960838] thermal LNXTHERM:01: registered as thermal_zone1
[    2.960857] ACPI: Thermal Zone [TZ01] (30 C)
[    2.961604] thermal LNXTHERM:02: registered as thermal_zone2
[    2.961623] ACPI: Thermal Zone [TZ02] (10 C)
[   10.673018] int3403 thermal: probe of INT3403:00 failed with error -22
[   10.810550] proc_thermal 0000:00:04.0: Creating sysfs group for PROC_THERMAL_PCI
[   12.572630] thermal thermal_zone7: failed to read out thermal zone (-61)
[chris@flap ~]$ grep -i thermal bug202671dmesg5.0.0rc8-withpatch.txt
[    0.250085] mce: CPU0: Thermal monitoring enabled (TM1)
[    0.701650] ACPI: \_PR_.CPU0: _OSC native thermal LVT Acked
[    2.997971] thermal LNXTHERM:00: registered as thermal_zone0
[    2.997994] ACPI: Thermal Zone [TZ00] (28 C)
[    2.999849] thermal LNXTHERM:01: registered as thermal_zone1
[    2.999868] ACPI: Thermal Zone [TZ01] (30 C)
[    3.000619] thermal LNXTHERM:02: registered as thermal_zone2
[    3.000638] ACPI: Thermal Zone [TZ02] (10 C)
[   10.774682] proc_thermal 0000:00:04.0: Creating sysfs group for PROC_THERMAL_PCI
[   12.449219] thermal thermal_zone7: failed to read out thermal zone (-61)
[chris@flap ~]$ 



So error -22 is gone. thermal_zone7 fail message still present (maybe it's unrelated,not sure)
Comment 12 Zhang Rui 2019-03-01 03:11:14 UTC
that is another issue.

please attach the output of "grep . /sys/class/thermal/thermal_zone*/t*"
Comment 13 Chris Murphy 2019-03-01 04:06:52 UTC
[root@flap ~]# grep . /sys/class/thermal/thermal_zone*/t*
/sys/class/thermal/thermal_zone0/temp:27800
/sys/class/thermal/thermal_zone0/trip_point_0_temp:119000
/sys/class/thermal/thermal_zone0/trip_point_0_type:critical
/sys/class/thermal/thermal_zone0/trip_point_1_temp:71000
/sys/class/thermal/thermal_zone0/trip_point_1_type:active
/sys/class/thermal/thermal_zone0/trip_point_2_temp:55000
/sys/class/thermal/thermal_zone0/trip_point_2_type:active
/sys/class/thermal/thermal_zone0/trip_point_3_temp:50000
/sys/class/thermal/thermal_zone0/trip_point_3_type:active
/sys/class/thermal/thermal_zone0/trip_point_4_temp:45000
/sys/class/thermal/thermal_zone0/trip_point_4_type:active
/sys/class/thermal/thermal_zone0/trip_point_5_temp:40000
/sys/class/thermal/thermal_zone0/trip_point_5_type:active
/sys/class/thermal/thermal_zone0/type:acpitz
/sys/class/thermal/thermal_zone1/temp:29800
/sys/class/thermal/thermal_zone1/trip_point_0_temp:119000
/sys/class/thermal/thermal_zone1/trip_point_0_type:critical
/sys/class/thermal/thermal_zone1/type:acpitz
/sys/class/thermal/thermal_zone2/temp:10000
/sys/class/thermal/thermal_zone2/trip_point_0_temp:99000
/sys/class/thermal/thermal_zone2/trip_point_0_type:hot
/sys/class/thermal/thermal_zone2/type:acpitz
/sys/class/thermal/thermal_zone3/temp:20000
/sys/class/thermal/thermal_zone3/type:INT3400 Thermal
/sys/class/thermal/thermal_zone4/temp:51500
/sys/class/thermal/thermal_zone4/trip_point_0_temp:115000
/sys/class/thermal/thermal_zone4/trip_point_0_type:critical
/sys/class/thermal/thermal_zone4/type:pch_skylake
/sys/class/thermal/thermal_zone5/temp:57000
/sys/class/thermal/thermal_zone5/trip_point_0_hyst:0
/sys/class/thermal/thermal_zone5/trip_point_0_temp:105000
/sys/class/thermal/thermal_zone5/trip_point_0_type:critical
/sys/class/thermal/thermal_zone5/trip_point_1_hyst:0
/sys/class/thermal/thermal_zone5/trip_point_1_temp:105000
/sys/class/thermal/thermal_zone5/trip_point_1_type:hot
/sys/class/thermal/thermal_zone5/trip_point_2_hyst:0
/sys/class/thermal/thermal_zone5/trip_point_2_temp:54000
/sys/class/thermal/thermal_zone5/trip_point_2_type:passive
/sys/class/thermal/thermal_zone5/trip_point_3_hyst:0
/sys/class/thermal/thermal_zone5/trip_point_3_temp:105000
/sys/class/thermal/thermal_zone5/trip_point_3_type:active
/sys/class/thermal/thermal_zone5/trip_point_4_hyst:0
/sys/class/thermal/thermal_zone5/trip_point_4_temp:100000
/sys/class/thermal/thermal_zone5/trip_point_4_type:active
/sys/class/thermal/thermal_zone5/type:B0D4
/sys/class/thermal/thermal_zone6/temp:53000
/sys/class/thermal/thermal_zone6/trip_point_0_temp:0
/sys/class/thermal/thermal_zone6/trip_point_0_type:passive
/sys/class/thermal/thermal_zone6/trip_point_1_temp:0
/sys/class/thermal/thermal_zone6/trip_point_1_type:passive
/sys/class/thermal/thermal_zone6/type:x86_pkg_temp
/sys/class/thermal/thermal_zone7/temp:33000
/sys/class/thermal/thermal_zone7/trip_point_0_temp:-32768000
/sys/class/thermal/thermal_zone7/trip_point_0_type:passive
/sys/class/thermal/thermal_zone7/trip_point_1_temp:-32768000
/sys/class/thermal/thermal_zone7/trip_point_1_type:passive
/sys/class/thermal/thermal_zone7/trip_point_2_temp:-32768000
/sys/class/thermal/thermal_zone7/trip_point_2_type:passive
/sys/class/thermal/thermal_zone7/trip_point_3_temp:-32768000
/sys/class/thermal/thermal_zone7/trip_point_3_type:passive
/sys/class/thermal/thermal_zone7/trip_point_4_temp:-32768000
/sys/class/thermal/thermal_zone7/trip_point_4_type:passive
/sys/class/thermal/thermal_zone7/trip_point_5_temp:-32768000
/sys/class/thermal/thermal_zone7/trip_point_5_type:passive
/sys/class/thermal/thermal_zone7/trip_point_6_temp:-32768000
/sys/class/thermal/thermal_zone7/trip_point_6_type:passive
/sys/class/thermal/thermal_zone7/trip_point_7_temp:-32768000
/sys/class/thermal/thermal_zone7/trip_point_7_type:passive
/sys/class/thermal/thermal_zone7/type:iwlwifi
[root@flap ~]#
Comment 14 Zhang Rui 2019-03-11 02:52:12 UTC
thermal zone 7 is wifi. and it is caused by the firmware load/unload.
Mark the bug as resolved for this particular issue.

For the wifi thermal issue, it was on my radar, and I will fix it some timer later when I have time.

Note You need to log in before you can comment on or make changes to this bug.