thermal/int3403_thermal: favor _TMP instead of PTYP

All the INT3403 devices with _TMP can be a sensor.

Link: https://bugzilla.kernel.org/show_bug.cgi?id=202671
Signed-off-by: Zhang Rui <rui.zhang@intel.com>